[package]
name = "mtls"
description = "Generate self-signed certificates for mutual TLS authentication"
version = "0.1.0"
authors = ["doroved"]
edition = "2021"

[dependencies]
chrono = "0.4.38"
rcgen = { version = "0.13.1", features = ["aws_lc_rs"] }
clap = { version = "4.5.23", features = ["derive"] }
