[package]
name = "mtls"
description = "Generate self-signed certificates for mutual TLS authentication"
version = "0.1.1"
authors = ["doroved"]
readme = "README.md"
repository = "https://github.com/doroved/mtls"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
rcgen = { version = "0.13.2", features = ["aws_lc_rs"] }
clap = { version = "4.5.37", features = ["derive"] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "z"   # Optimize for binary size s = 1.7 mb | z = 1.6 mb
strip = true      # Remove debug symbols
